--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -174,6 +174,9 @@
             }
 
         }  else {
+            if ( $.fn.DataTable.isDataTable('#countries') ) {
+                dTable.destroy();
+            }   
         dTable = $('#countries').DataTable( {
             
             fixedHeader: {
