--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -301,6 +301,14 @@
                 $('.lang').html('<span class="flag-icon-background flag-icon-tz flag-icon-squared"></span>');
             }
         }
+        function CountriesStyling(isTrue){
+            $('#countries_filter').before('.masthead');
+            if(isTrue == true) {
+                $('.masthead').addClass('stickTop');
+            } else {
+                $('.masthead').removeClass('stickTop');
+            }
+        }
         $(document).ready(function(){
             $('.settings').appendTo('#footer footer');
             fetchDATA();
@@ -346,12 +354,14 @@
                 }
                 if($('.countrydata').hasClass("show")) {
                     $('.cuInstructions').fadeIn(200);
+                    CountriesStyling(false);
                     $('.countrydata').removeClass("show").fadeOut(200, function(){
                         $('updates').fadeIn(500).addClass("show"); 
                     });
 
                 } else {
                     $('.cuInstructions').fadeOut(200);
+                    CountriesStyling(true);
                     $('updates').removeClass("show").fadeOut(200, function() {
                     $('.countrydata').fadeIn(500, function(){
                         loadTable(false);
