--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -412,7 +412,7 @@ updates note {
 
 }
 
-#countries_filter input, #countries_filter input::placeholder, #countries_filter input:-ms-input-placeholder,  #countries_filter input::-webkit-input-placeholder {
+.transparent-search, .transparent-search::placeholder, .transparent-search:-ms-input-placeholder,  .transparent-search::-webkit-input-placeholder {
     background:transparent!important;
     color:#fff!important;
     outline-style: none!important;
