--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -99,6 +99,19 @@
                     <th>Total Deaths/<br>1M pop</th>
                     <th>First<br>Case</th>
                 </tr>
+                <tr class="no-border">
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                </tr>
             </thead>
             <tbody>
                 <tr>
