--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -33,7 +33,7 @@
         <span class="lang">
             <span class="flag-icon-background flag-icon-tz flag-icon-squared"></span>
          </span>
-         <span class="tableSwitch">
+         <span class="tableSwitch hidden">
             <i class="fa-stack fa-2x">
             <i class="fas fa-circle fa-stack-2x"></i>
             <i class="fas set fa-th-list fa-stack-1x fa-inverse"></i></i>
@@ -83,7 +83,7 @@
     <h3 class="h-indent swahili"><span class="emoji">ℹ️</span>Fuatilia taarifa mpya zinazotolewa na Shirika la Afya Duniani (WHO) na mamlaka husika karibu nawe</h3>
     <p class="swahili"></p>
     </section>
-    <section class="countrydata">
+    <!--<section class="countrydata">
         <table id="countries" class="countries">
             <thead>
                 <tr>
@@ -128,7 +128,7 @@
                 </tr>
             </tfoot>
         </table>
-    </section>
+    </section>-->
     </div>
     </div>
 
@@ -145,7 +145,7 @@
       </footer>
     </div>
     {% include scripts.html %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.20/js/jquery.dataTables.min.js" integrity="sha256-L4cf7m/cgC51e7BFPxQcKZcXryzSju7VYBKJLOKPHvQ=" crossorigin="anonymous"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.20/js/jquery.dataTables.min.js" integrity="sha256-L4cf7m/cgC51e7BFPxQcKZcXryzSju7VYBKJLOKPHvQ=" crossorigin="anonymous"></script>-->
     <!--<script src="https://cdn.datatables.net/fixedheader/3.1.6/js/dataTables.fixedHeader.min.js" crossorigin="anonymous"></script> !-->
     <script src="{{ '/assets/js/covid19.js' | relative_url }}?v={{ site.build }}"></script>
   </body>
