--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -427,3 +427,5 @@ updates note {
 }
 #main {transition: all 0.3s ease-in-out;}
 .scrolledTable{ overflow-y: auto; clear:both; }
+
+.hidden {display:none}
